[package]
name = "xrbevy"
version = "0.1.0"
authors = ["Mika Vatanen <blaind@blaind.net>"]
edition = "2018"

[features]
default = []

[dependencies]
bevy_openxr = { path = "./repos/bevy_openxr/crates/bevy_openxr" }
bevy_openxr_core = { path = "./repos/bevy_openxr/crates/bevy_openxr_core" }

[dependencies.bevy]
path = "./repos/bevy"
features = [
  "bevy_dynamic_plugin",
  "bevy_gilrs",
  "bevy_gltf",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11"
]
default-features = false

[dev-dependencies]
log = "0.4.14"
env_logger = "0.8.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.2.1"

[package.metadata.android]
apk_label = "Bevy OpenXR wgpu"
build_targets = ["aarch64-linux-android"]
assets = "assets"
libs = "libs"

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 29

[[package.metadata.android.application.meta_data]]
name = "com.samsung.android.vr.application.mode"
value = "vr_only"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest|quest2"

[package.metadata.android.application.activity]
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = "false"

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[[package.metadata.android.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]
data = []

[[package.metadata.android.permission]]
name = "com.oculus.permission.HAND_TRACKING"

[[package.metadata.android.feature]]
name = "oculus.software.handtracking"
required = false

[profile.release]
opt-level = 3
#lto = true

[[example]]
name = "xr_apk_scene"
crate-type = ["cdylib"]

[[example]]
name = "xr_pc_scene"

[[example]]
name = "non_xr_scene"

[patch.crates-io]
bevy = { path = "./repos/bevy" }
openxr = { path = "./repos/openxrs/openxr" }
openxr-sys = { path = "./repos/openxrs/sys" }
wgpu = { path = "./repos/wgpu-rs" }
